pkg/main/default/objects/ContentVersion/fields/GeneratedFileName__c.field-meta.xml
<CustomField>
	<fullName>GeneratedFileName__c</fullName>
	<label>Generated File Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>