pkg/main/default/objects/ContentVersion/fields/GeneratedFileSuffix__c.field-meta.xml
<CustomField>
	<fullName>GeneratedFileSuffix__c</fullName>
	<label>Generated File Suffix</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>name</fullName>
				<default>true</default>
				<label>name</label>
			</value>
			<value>
				<fullName>date</fullName>
			</value>
			<value>
				<fullName>name_date</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>