pkg/main/default/objects/ContentVersion/fields/Rule__c.field-meta.xml
<CustomField>
    <fullName>Rule__c</fullName>
    <label>Rule</label>
    <length>131072</length>
    <type>LongTextArea</type>
    <description>JSON mapping for storing Document Generation rule helpful in implementing Conditional Template
        generation.
    </description>
</CustomField>